--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,6 +22,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PE'
 - !lcsh 'English language -- Grammar'
+- GITenberg
 title: 'A Short System of English Grammar
 
   For the Use of the Boarding School in Worcester (1759)'
